# gnatpy

./: .gitignore  .harper-dictionary.txt  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
docs/source/: conf.py  index.rst
docs/source/api_reference/: api_index.rst  crane.rst  dirac.rst  infer.rst  race.rst
src/gnatpy/: __init__.py  _bootstrap_pvalue.py  classifier.py  crane_functions.py  dirac_functions.py  gnatpy_types.py  infer_functions.py  race_functions.py  statistical_utils.py
tests/: test_crane_functions.py  test_datagen.py  test_dirac_functions.py  test_infer_functions.py  test_race_functions.py
