[project]
name = "gnatpy"
description = "Analyze Rank Entropy in Python"
authors = [{ name = "Braden Griebel", email = "bgriebel@uw.edu" }]
version = "0.1.0"
readme = "README.md"
keywords = ["entropy", "rank", "gene", "bioinformatics"]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "joblib>=1.4.2",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scipy>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/Ma-Lab-Seattle-Childrens-CGIDR/gnatpy"
Repository = "https://github.com/Ma-Lab-Seattle-Childrens-CGIDR/gnatpy"
Documentation = "https://gnatpy.readthedocs.io/en/latest/"
Issues = "https://github.com/Ma-Lab-Seattle-Childrens-CGIDR/gnatpy/issues"
Changelog = "https://github.com/Ma-Lab-Seattle-Childrens-CGIDR/gnatpy/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.0.1",
  "ruff>=0.15.7",
  "tox>=4.30.3",
  "tox-uv>=1.28.1",
  "ty>=0.0.26",
]
docs = [
  "jupyter>=1.1.1",
  "nbsphinx>=0.9.8",
  "sphinx>=7.4.7",
  "sphinx-rtd-theme>=3.1.0",
]
